--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,13 @@
-name: CI
-
+name: Create Test File
 on:
   push:
     branches:
       - main
-
 jobs:
-  build:
+  create-file:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build Docker image
-      run: docker-compose build myblog
-
-    - name: Run Docker container
-      run: docker-compose run myblog npm test
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Create Test File
+        run: touch test0.txt
